syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zup.br.orange";
option java_outer_classname = "KeyManageGRPC";
option objc_class_prefix = "HLW";

package com.zup.br.orange;

service PixKeyRegisterService {
  rpc register(PixKeyRegisterGrpcRequest) returns (PixKeyRegisterGrpcResponse) {}
}

enum KeyType {
  UNKNOWN_TYPE = 0;
  CPF = 1;
  PHONE = 2;
  EMAIL = 3;
  RANDOM = 4;
}

enum AccountType {
  UNKNOWN_ACCOUNT = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message PixKeyRegisterGrpcRequest {
  string clientId = 1;
  KeyType keyType = 2;
  string keyValue = 3;
  AccountType account = 4;
}

message PixKeyRegisterGrpcResponse {
  string clientId = 1;
  string pixId = 5;
}
